<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">預約通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="t11">再按一次退出程序</string>
    <string name="login_1">登入</string>
        <string name="login_2">忘記密碼</string>
        <string name="login_3">直接預約</string>
                <string name="second1">預約診所</string>
                <string name="second2">地區</string>
                                <string name="second3">註冊專科</string>
                                <string name="second4">預約日期</string>
                                                <string name="second5">下一步</string>
          <string name="left1">馬上預約</string>
         <string name="left2">診所資料</string>
          <string name="left3">我的資料</string>
          <string name="left8">登出</string>
          <string name="left4">更改設置</string>
          <string name="left5">預約通簡介</string>
                   <string name="left6">提供建議</string>
                   <string name="left7">—— —— —— —— —— —— ——</string>
                      <string name="third1">選擇診所</string>
      <string name="Itext1">預約通連鎖醫務中心</string>
      <string name="Itext2">地址：將軍澳XXXXXXXXXXXXX</string>
      <string name="Itext3">陳大文醫生（應診時間：10:00-20:00) 當日預約人數5人</string>
            <string name="Itext4">陳大文醫生（應診時間：14:00-20:00) 當日預約人數3人</string>
      
      <string name="Itext5">註冊專科:兒科、普通科、牙科</string>
      <string name="Itext6">基本診金：HK$ 200</string>
      <string name="Itext7">電話：12345678</string>
            <string name="Itext8">陳大文醫生</string>
            <string name="Itext9">陳大文醫生可供預約時段</string>
            <string name="Itext10">預約時段:7月22日 14:00</string>
            <string name="Itext11">請輸入姓名</string>
                        <string name="Itext12">請輸入電話</string>
                        <string name="Itext13">請輸入詳細地址</string>
                        <string name="Itext14">男</string>
                        <string name="Itext15">女</string>
                        <string name="Itext16">預約通連鎖醫務中心 7月22日 14:00-14:30</string>
                        <string name="Itext17">心醫美務中心 7月22日 15:00-16:30</string>
            <string name="BItext1">預約通連鎖醫務中心</string>
            <string name="BItext2">地址：將軍澳XXXXXXXXXXXXX</string>
            <string name="BItext3">陳大文醫生</string>
            <string name="BItext4">7月22日</string>
            <string name="BItext5">14:00-14:30</string>
            <string name="BItext6">預約號碼</string>
            <string name="BItext7">18</string>
            <string name="BItext8">現在叫號</string>
            <string name="BItext9">15</string>
            <string name="BItext10">更新時間：12:30</string>
            <string name="BItext11">如已到診所，請與姑娘確認</string>
            
            <string name="inputRe">提交預約</string>    
            <string name="inputRe1">預約確認</string>    
            <string name="inputRe2">我的預約</string>    
            <string name="inputRe3">妳的預約號碼</string>    
            <string name="inputRe4">18</string>    
            <string name="inputRe5">取消預約</string>    
            <string name="i11">我的最爱</string>
            <string name="i12">我的預約</string>
</resources>
