<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/leftbackground3"
    android:layout_height="match_parent"
  >

    <RelativeLayout 
        android:id="@+id/mRl1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/left_top1"
        
        >
        <RelativeLayout 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mRlLeft"
            android:layout_centerVertical="true"
            >
        <ImageView 
            android:src="@drawable/left_image1"
            android:layout_width="wrap_content"
            android:id="@+id/mIv11"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            />
                        <TextView 
            android:layout_centerInParent="true"
            android:text="@string/left1"
                        android:layout_marginLeft="10dp"
            
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/mIv11"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            />
        
        </RelativeLayout>
        
</RelativeLayout>

    <RelativeLayout 
        android:layout_below="@id/mRl1"
        android:layout_width="fill_parent"
        android:id="@+id/mRl2"
        android:layout_height="wrap_content"
        android:background="@drawable/leftbackground2"
        
        >
       <RadioGroup
            android:id="@+id/rp"
            android:layout_centerVertical="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/male"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/i11"
                android:textColor="@color/white"
                android:checked="true">
                
            </RadioButton>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="@string/i12" >
            </RadioButton>
        </RadioGroup>
</RelativeLayout>

    <RelativeLayout 
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_out"
        android:id="@+id/mRl3"
        >
       <ImageView 
           android:layout_width="25dp"
           android:layout_height="25dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:src="@drawable/login_out4"
           android:id="@+id/mIv123"
                          android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
           
           />
           <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/mIv123"
             android:layout_marginLeft="5dp"
                            android:textColor="@color/yellow"
                             android:textSize="18sp"
                              android:layout_centerVertical="true"
               
                android:text="@string/left8"
                />     
        
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/mRl3"
        android:layout_below="@id/mRl2"
        android:layout_alignParentLeft="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/left2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/left3"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/left4"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:singleLine="true"
                android:text="@string/left7"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/left5"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/left6"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
    
</RelativeLayout>
