<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
   android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_top"
        >
     <RelativeLayout 
         android:layout_width="50dp"
         android:id="@+id/mRlre1"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/title_top_left"
            android:layout_centerInParent="true"
             />
     </RelativeLayout>
        <TextView 
            android:text="@string/second1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
</RelativeLayout>

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         
         >
         <View 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="1dp"
             />
         <LinearLayout
             android:layout_width="0dp"
             android:orientation="vertical"
             android:layout_weight="4"
             android:layout_height="wrap_content"
             >
                     <Button 
                    android:layout_marginTop="30dp"
            android:text="@string/second2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/mBtReser1"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bar1"
            />
                                  <Button 
                    android:layout_marginTop="20dp"
            android:text="@string/second3"
            android:textColor="@color/white"
                        android:gravity="center"
            
            android:textSize="16sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bar1"
            />
                                  <Button 
                    android:layout_marginTop="20dp"
            android:text="@string/second4"
            android:textColor="@color/white"
            android:textSize="16sp"
                        android:gravity="center"
             android:id="@+id/mBtReser3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bar1"
            />
                                  <Button 
                    android:layout_marginTop="40dp"
            android:text="@string/second5"
            android:textColor="@color/white"
            android:textSize="16sp"
                        android:gravity="center"
             android:id="@+id/mBtReser4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_next"
            />
                                  
         </LinearLayout>
                  <View 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="1dp"
             />
         
     </LinearLayout>       
        
    </ScrollView>
    
    
    
    
    
    
    
</LinearLayout>
